# aiopyo365

./: README.md  pyproject.toml
.github/workflows/: release.yml
aiopyo365/: auth_providers.py  clients.py  config.py  exceptions.py  services.py
aiopyo365/factories/: abstract.py  drive_items.py  sites.py
aiopyo365/providers/: auth.py
aiopyo365/ressources/: files.py  sites.py
aiopyo365/services/: sharepoint.py
tests/: test_auth_provider.py  test_ressource_file.py  test_services_sharepoint.py
tests/test_data/: small.txt
