[tool.poetry]
name = "aiopyo365"
version = "0.1.1a0"
description = ""
authors = ["gonza <matgonzalez@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
flake8 = "^6.0.0"
coverage = "^6.5.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
